feat: allow option-drag range moves with preview
Enable Option/Alt drag on range labels to shift ranges within the current month.

Add a minimal drag preview highlight for the prospective range position.

--- a/CalendarMonger/style.css
+++ b/CalendarMonger/style.css
@@ -59,6 +59,10 @@ html {
   background-color: rgb(224 231 255);
 }
 
+.drag-preview {
+  box-shadow: inset 0 0 0 2px rgba(59, 130, 246, 0.7);
+}
+
 .selection-count {
   position: absolute;
   bottom: 0;
